@@ -1,0 +1,24 @@
+package xml;
+
+
+public class Bar1
+    extends Bar
+{
+
+
+    private int  _baz1;
+
+
+    public int getBaz1()
+    {
+        return _baz1;
+    }
+
+
+    public void setBaz1( int baz )
+    {
+        _baz1 = baz;
+    }
+
+
+}
