@@ -1,0 +1,24 @@
+package xml;
+
+
+public class Bar2
+    extends Bar
+{
+
+
+    private boolean  _baz2;
+
+
+    public boolean getBaz2()
+    {
+        return _baz2;
+    }
+
+
+    public void setBaz2( boolean baz )
+    {
+        _baz2 = baz;
+    }
+
+
+}
