@@ -1,0 +1,20 @@
+package xml;
+
+
+import java.util.Vector;
+
+
+public class Foo
+{
+
+
+    private Vector _bar = new Vector();
+
+
+    public Vector getBar()
+    {
+        return _bar;
+    }
+
+
+}
