@@ -20,6 +20,8 @@ JDO:     Fixed SQLTypes to pick up proper SQL type form field of type java.util.
          Fixed SQLEngine to use SQL type in some calls to setObject.
          (Contributed by Donald Ball <balld@webslingerz.com>)
 
+JDO:     Added quoting to column and table names to support white spaces and keywords.
+
 Mapping: Added resetValue() method to field handler. This generally resets a field to
          it's default value or empties a collection field.
 
@@ -33,6 +35,13 @@ Mapping: Fixed mapping loader to complain if get/set methods are not found. Both
 
 Mapping: Added convertor between String and character. (Reported by Donald Ball
          <balld@webslingerz.com>)
+
+Mapping: To fix problem with compiled class descriptors for XML and mapping file for
+         JDO not working together, mapping loading will not attempt to load class
+         descriptors. A permanent fix will be included in 0.9 or 1.0.
+         (Patiently reported by Andrew Ikon <aikon@niku.com>).
+
+Mapping: Fixed collection handler to work with arrays of any object type (e.g. strings).
 
 
 Version 0.8.5  May 12, 2000
